[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-catalog"
version = "0.1.0"
description = "DSA problem catalog and testcase bundle source for grindx"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "xghostient" }]
